--- a/manifests/yamls/kubewatch.yaml
+++ b/manifests/yamls/kubewatch.yaml
@@ -160,7 +160,7 @@ spec:
     spec:
       containers:
       - name: kubewatch
-        image: quay.io/devtron/kubewatch:8aef551d-128-2196
+        image: quay.io/devtron/kubewatch:v0.1.0
         env:
         - name: devtroncd_NAMESPACE
           value: "devtron-ci"
