--- a/manifests/yamls/guard.yaml
+++ b/manifests/yamls/guard.yaml
@@ -65,6 +65,7 @@ metadata:
     release: devtron
     releaseVersion: "1"
     pipelineName: guard-dt-prod
+    component: guard
 spec:
   selector:
     matchLabels:
@@ -79,6 +80,7 @@ spec:
         appId: "181"
         envId: "4"
         release: devtron
+        component: guard
     spec:
       terminationGracePeriodSeconds: 30
       restartPolicy: Always
