--- a/manifests/yamls/clair.yaml
+++ b/manifests/yamls/clair.yaml
@@ -7,6 +7,7 @@ metadata:
     release: "devtron"
     chart: "clair-0.1.2"
     app: clair
+    component: clair
 type: Opaque
 data:
   config.yaml: |-
@@ -21,6 +22,7 @@ metadata:
     release: "devtron"
     chart: "clair-0.1.2"
     app: clair
+    component: clair
 spec:
   type: ClusterIP
   ports:
@@ -44,6 +46,7 @@ metadata:
     release: "devtron"
     chart: "clair-0.1.2"
     app: clair
+    component: clair
 spec:
   replicas: 1
   selector:
@@ -53,6 +56,7 @@ spec:
     metadata:
       labels:
         app: clair
+        component: clair
     spec:
       volumes:
       - name: "clair-config"
