--- a/manifests/yamls/postgresql.yaml
+++ b/manifests/yamls/postgresql.yaml
@@ -34,6 +34,7 @@ metadata:
     app: postgresql
     chart: postgresql-8.6.4
     release: "devtron"
+    component: postgresql
   annotations:
     prometheus.io/port: "9187"
     prometheus.io/scrape: "true"
@@ -77,6 +78,7 @@ metadata:
     app: postgresql
     chart: postgresql-8.6.4
     release: "devtron"
+    component: postgresql
 spec:
   type: ClusterIP
   ports:
@@ -97,6 +99,7 @@ metadata:
     app: postgresql
     chart: postgresql-8.6.4
     release: "devtron"
+    component: postgresql
 spec:
   serviceName: postgresql-postgresql-headless
   replicas: 1
@@ -115,6 +118,7 @@ spec:
         chart: postgresql-8.6.4
         release: "devtron"
         role: master
+        component: postgresql
     spec:      
       securityContext:
         fsGroup: 1001
