updated migrators label

--- a/manifests/yamls/migrator.yaml
+++ b/manifests/yamls/migrator.yaml
@@ -18,6 +18,9 @@ metadata:
 spec:
   ttlSecondsAfterFinished: 1000
   template:
+    metadata:
+      labels:
+        component: postgresql-migrate-devtron
     spec:
       containers:
       - name: postgresql-migrate-devtron
@@ -58,6 +61,9 @@ metadata:
     component: postgresql-migrate-casbin
 spec:
   template:
+    metadata:
+      labels:
+        component: postgresql-migrate-casbin
     spec:
       containers:
       - name: postgresql-migrate-casbin
@@ -98,6 +104,9 @@ metadata:
     component: postgresql-migrate-gitsensor
 spec:
   template:
+    metadata:
+      labels:
+        component: postgresql-migrate-gitsensor
     spec:
       containers:
       - name: postgresql-migrate-gitsensor
@@ -138,6 +147,9 @@ metadata:
     component: postgresql-migrate-lens
 spec:
   template:
+    metadata:
+      labels:
+        component: postgresql-migrate-lens
     spec:
       containers:
       - name: postgresql-migrate-lens
