--- a/manifests/yamls/migrator.yaml
+++ b/manifests/yamls/migrator.yaml
@@ -22,7 +22,7 @@ spec:
         image: quay.io/devtron/migrator:6687f572-133-2208
         env:
         - name: GIT_BRANCH
-          value: main
+          value: ls_webhook
         - name: SCRIPT_LOCATION
           value: scripts/sql/
         - name: GIT_REPO_URL
@@ -40,7 +40,7 @@ spec:
         - name: MIGRATE_TO_VERSION
           value: "0"
         - name: GIT_HASH
-          value: 7d8435519013ea8f8c00064ab8d87ad1d339a497
+          value: c56c51082e26e8cd80c47262190271f64b872233
         envFrom:
           - secretRef:
               name: postgresql-migrator
@@ -114,9 +114,9 @@ spec:
         - name: MIGRATE_TO_VERSION
           value: "0"
         - name: GIT_BRANCH
-          value: main
+          value: webhook_integration
         - name: GIT_HASH
-          value: 8badb0374525dd0cef0b6d00bc91195d659135c2
+          value: 9a3b65cba97a4969648893176110d14ceffe4f9d
         envFrom:
           - secretRef:
               name: postgresql-migrator
